KVASIR/DRRMSAN/edit.txt
>>> (0.8319-0.7514)+(0.9571-0.9223)+(0.8875-0.8086)+(0.6515-0.5432)
0.3024999999999999
>>> ((0.8319-0.7514)+(0.9571-0.9223)+(0.8875-0.8086)+(0.6515-0.5432))/4
0.07562499999999997
>>> (((0.8319-0.7514)+(0.9571-0.9223)+(0.8875-0.8086)+(0.6515-0.5432))/4)+6809
6809.075625
>>> (((0.8319-0.7514)+(0.9571-0.9223)+(0.8875-0.8086)+(0.6515-0.5432))/4)+0.68090.7565249999999999
>>> ((()+()+()+())/4)+
  File "<stdin>", line 1
    ((()+()+()+())/4)+
                     ^
SyntaxError: invalid syntax
>>> (((0.8254-0.7367)+(0.9758-0.9530)+(0.9265-0.8666)+(0.6048-0.5035))/4)+0.7182
0.7863749999999999
>>> (((0.8240-0.7385)+(0.9755-0.9533)+(0.9444-0.8959)+(0.7714-0.6731))/4)+0.6160
0.6796249999999999
>>> (((0.8856-0.8146)+(0.9682-0.9414)+(0.9461-0.8996)+(0.7633-0.6806))/4)+0.7041
0.76085
>>> (((0.8853-0.8139)+(0.9724-0.9485)+(0.9470-0.9014)+(0.7825-0.6963))/4)+0.6952
0.7519750000000001
>>> (((0.8292-0.7445)+(0.9645-0.9337)+(0.9095-0.8391)+(0.5241-0.4174))/4)+0.66000.7331500000000001
>>> (((0.8688-0.7886)+(0.9762-0.9534)+(0.9471-0.9011)+(0.6053-0.5027))/4)+0.74590.8088
>>> 

